refactor: migrate report feedback from external Argilla service to MongoDB (#267)
* refactor: migrate report feedback from external Argilla service to MongoDB

* chore: add extra validation

* fix: review fixes

* chore: add regex validation on the string fields
